--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,15 @@
     <string name="welcome_sms">Pour toi à qui je dis tout:</string>
     <string name="message_sms">Message</string>
     <string name="text_btn">"C'est parti!"</string>
+    <string name="permission_request">On a la permission?</string>
+    <string name="permission_title">On y va?</string>
+    <string name="permission_message">"Pour pouvoir envoyer un SMS, nous avons besoin de votre permission :-)"</string>
+    <string name="permission_ok_btn">Allez-y!</string>
+    <string name="permission_no_btn">Non, non</string>
+    <string name="permission_ok_toast">Permission accordée!</string>
+    <string name="permission_no_toast">Permission refusée</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
