--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="permission_no_toast">Permission refusée</string>
     <string name="permission_wrong">"Oups, ce numéro n'a pas le bon nombre de chiffres"</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pie_title">"Un peu de statistiques?"</string>
+
 
 </resources>
