commentaires en anglais

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,18 @@
     <string name="permission_no_toast">Permission refusée</string>
     <string name="permission_wrong">"Oups, ce numéro n'a pas le bon nombre de chiffres"</string>
 
-    <string name="pie_title">"Un peu de statistiques?"</string>
+    <string name="sms_1">"carrément mauvaise"</string>
+    <string name="sms_2">"pas franchement bonne"</string>
+    <string name="sms_3">"ni bonne, ni mauvaise"</string>
+    <string name="sms_4">"bonne"</string>
+    <string name="sms_5">"super bonne"</string>
+    <string name="sms_text1">"Je te partage mon humeur du moment. Elle est"</string>
 
+    <string name="pie_title">Petit résumé de la semaine</string>
+    <string name="pie_1">"--"</string>
+    <string name="pie_2">"-"</string>
+    <string name="pie_3">"="</string>
+    <string name="pie_4">"+"</string>
+    <string name="pie_5">"++"</string>
 
 </resources>
